download and extract octo.exe

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,9 +10,19 @@ jobs:
       shell: powershell.exe
     steps:
       - checkout
+      - run: New-Item -ItemType Directory -Path ./bin
       - run:
           name: "Download Hugo v0.60.1"
-          command: $ProgressPreference = "SilentlyContinue"; Invoke-WebRequest -Uri https://github.com/gohugoio/hugo/releases/download/v0.60.1/hugo_0.60.1_Windows-64bit.zip -OutFile ./hugo_0.60.1_Windows-64bit.zip -UseBasicParsing
+          command: $ProgressPreference = "SilentlyContinue"; Invoke-WebRequest -Uri https://github.com/gohugoio/hugo/releases/download/v0.60.1/hugo_0.60.1_Windows-64bit.zip -OutFile ./bin/hugo_0.60.1_Windows-64bit.zip -UseBasicParsing
+      - run:
+          name: "Extract Hugo"
+          command: Expand-Archive -Path ./bin/hugo*.zip -DestinationPath ./bin
+      - run:
+          name: "Download Octo v6.16.0"
+          command: $ProgressPreference = "SilentlyContinue"; Invoke-WebRequest -Uri https://download.octopusdeploy.com/octopus-tools/6.16.0/OctopusTools.6.16.0.zip -OutFile ./bin/OctopusTools.6.16.0.zip -UseBasicParsing
+      - run:
+          name: "Extract Octo"
+          command: Expand-Archive -Path ./bin/OctopusTools*.zip -DestinationPath ./bin
       - run:
           name: "List current directory"
-          command: dir
+          command: dir ./bin
