--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,5 +24,5 @@ jobs:
           name: "Extract Octo"
           command: Expand-Archive -Path ./bin/OctopusTools*.zip -DestinationPath ./bin
       - run:
-          name: "List current directory"
-          command: dir ./bin
+          name: "Test Spelling and Punctuation"
+          command: npm test
