use nuget instead of octo

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,19 +10,15 @@ jobs:
       shell: powershell.exe
     steps:
       - checkout
-      - run: New-Item -ItemType Directory -Path ./bin
+      - run:
+          name: "Create Directory"
+          command: New-Item -ItemType Directory -Path ./bin
       - run:
           name: "Download Hugo v0.60.1"
-          command: $ProgressPreference = "SilentlyContinue"; Invoke-WebRequest -Uri https://github.com/gohugoio/hugo/releases/download/v0.60.1/hugo_0.60.1_Windows-64bit.zip -OutFile ./bin/hugo_0.60.1_Windows-64bit.zip -UseBasicParsing
+          command: $ProgressPreference = "SilentlyContinue"; Invoke-WebRequest -Uri https://github.com/gohugoio/hugo/releases/download/v0.60.1/hugo_0.60.1_Windows-64bit.zip -OutFile ./bin/hugo_0.60.1_Windows-64bit.zip -UseBasicParsing; Expand-Archive -Path ./bin/hugo*.zip -DestinationPath ./bin
       - run:
-          name: "Extract Hugo"
-          command: $ProgressPreference = "SilentlyContinue"; Expand-Archive -Path ./bin/hugo*.zip -DestinationPath ./bin
-      - run:
-          name: "Download Octo v6.16.0"
-          command: $ProgressPreference = "SilentlyContinue"; Invoke-WebRequest -Uri https://download.octopusdeploy.com/octopus-tools/6.16.0/OctopusTools.6.16.0.zip -OutFile ./bin/OctopusTools.6.16.0.zip -UseBasicParsing
-      - run:
-          name: "Extract Octo"
-          command: $ProgressPreference = "SilentlyContinue"; Expand-Archive -Path ./bin/OctopusTools*.zip -DestinationPath ./bin
+          name: "Download NuGet v5.3.1"
+          command: $ProgressPreference = "SilentlyContinue"; Invoke-WebRequest -Uri https://dist.nuget.org/win-x86-commandline/latest/nuget.exe -OutFile ./bin/nuget.exe -UseBasicParsing
       - run:
           name: "Install the markdown-proofing NPM package"
           command: npm install -g markdown-proofing
@@ -34,7 +30,7 @@ jobs:
           command: ./bin/hugo
       - run:
           name: "Package Website"
-          command: ./bin/octo pack --id cvd.id.au --version 1.0.$env:CIRCLE_BUILD_NUM
+          command: ./bin/nuget pack -Version 1.0.$env:CIRCLE_BUILD_NUM -NoDefaultExcludes -NoPackageAnalysis
       - run:
           name: "Publish Website"
-          command: ./bin/octo push --package ./cvd.id.au.1.0.$env:CIRCLE_BUILD_NUM.nupkg --server "https://f.feedz.io/cvd/cvd-id-au" --apiKey $env:FEEDZ_API_KEY
+          command: ./bin/nuget push -source https://f.feedz.io/cvd/cvd-id-au/nuget/index.json -ApiKey $env:FEEDZ_API_KEY ./cvd.id.au.1.0.$env:CIRCLE_BUILD_NUM.nupkg
