--- a/.nuspec
+++ b/.nuspec
@@ -7,6 +7,6 @@
     <authors>Chris van Dal</authors>
   </metadata>
   <files>
-    <file src="*\**" target="\" exclude="bin\**\*.*"/>
+    <file src="**" exclude="bin\**"/>
   </files>
 </package>
